contact us button z-index fix
git-svn-id: http://vreportetl01t.corp.hds.com/svnrepo/HDS.com-Revamp/hdscorp@2622 b06f84e9-1d16-493f-8c0d-41b76f67d7c8

--- a/hitachi-iot/iot-content/src/main/content/jcr_root/etc/clientlibs/hitachiiot/main/css/iot-solutions-contactus.css
+++ b/hitachi-iot/iot-content/src/main/content/jcr_root/etc/clientlibs/hitachiiot/main/css/iot-solutions-contactus.css
@@ -7,6 +7,7 @@
 .solutions.footer .footer-blue {
   display: block;
   margin-bottom: 50px;
+  z-index: 1;
 }
 
 .solutions.footer .footer-blue .talk {
